Fix search results spacing between articles

--- a/content/themes/handbook/sass/layout/_general.scss
+++ b/content/themes/handbook/sass/layout/_general.scss
@@ -76,4 +76,10 @@ body {
       }
     }
   }
+
+  &.search-results {
+    article {
+      margin-bottom: 40px;
+    }
+  }
 }
